[project]
name = "jobkit"
version = "0.1.0"
description = "Backend-agnostic job processing toolkit"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
pg = ["asyncpg"]
mysql = ["aiomysql"]
sqlite = ["aiosqlite"]

[project.scripts]
jobkit-worker = "jobkit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
