[project]
name = "pyjobkit"
version = "1.0.0"
description = "Backend-agnostic job processing toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
pg = ["asyncpg"]
mysql = ["aiomysql"]
sqlite = ["aiosqlite"]
metrics = ["prometheus_client>=0.20"]
docker = ["aiodocker>=0.21"]
fastapi = ["fastapi>=0.110", "pydantic>=2.0"]
redis = ["redis>=5.0"]

[project.scripts]
pyjobkit = "pyjobkit.cli:main"
pyjobkit-simulate = "pyjobkit.cli_simulate:main"
pyjobkit-migrate = "pyjobkit.cli_migrate:main"
pyjobkit-prune = "pyjobkit.cli_prune:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyjobkit*"]

[tool.setuptools.package-data]
pyjobkit = [
    "py.typed",
    "backends/sql/alembic.ini",
    "backends/sql/migrations/env.py",
    "backends/sql/migrations/versions/*.py",
]
